feat: Add application logo to navbar

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -15,7 +15,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/pipocaIA/dashboard}"><i class="fas fa-film"></i> PipocaIA</a>
+        <a class="navbar-brand" th:href="@{/pipocaIA/dashboard}">
+            <img th:src="@{/images/logo-pipocaia.png}" alt="Logo PipocaIA">
+        </a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
