--- a/src/main/resources/templates/alterar-filme.html
+++ b/src/main/resources/templates/alterar-filme.html
@@ -11,7 +11,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/pipocaIA/dashboard}"><i class="fas fa-film"></i> PipocaIA</a>
+        <a class="navbar-brand" th:href="@{/pipocaIA/dashboard}">
+            <img th:src="@{/images/logo-pipocaia.png}" alt="Logo PipocaIA">
+        </a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link" th:href="@{/pipocaIA/dashboard}"><i class="fas fa-list-ul me-1"></i> Meu Catálogo</a></li>
